<resources>
    <string name="app_name">Akash Technolabs Internship</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prime_number_checker">Prime Number Checker</string>
    <string name="single_number">Single Number</string>
    <string name="number_interval">Number Interval</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="check">Check</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="here_is_the_list_of_prime_numbers">Here is the list of prime numbers</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="weight_in_kgs">Weight in kgs</string>
    <string name="height_in_cms">Height in cms</string>
    <string name="calculate">Calculate</string>
    <string name="bmi">BMI:-</string>
    <string name="result">Result:-</string>
    <string name="healthy_weight">Healthy Weight:-</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="number_converter">Number Converter</string>
    <string name="drawable_down">drawable down</string>
    <string name="please_select_one_option">Please select one option</string>
    <string name="enter_number">Enter Number</string>
    <string name="converted_numbers">Converted Numbers</string>
    <string name="binary">Binary</string>
    <string name="octal">Octal</string>
    <string name="decimal">Decimal</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="logo">logo</string>
    <string name="submit_payment">SUBMIT PAYMENT</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="security_code">Security Code</string>
    <string name="mm_yy">MM/YY</string>
    <string name="card_number">Card number</string>
    <string name="reset">Reset</string>
    <string name="credit_card_checker">Credit Card Checker</string>
    <string name="cardNumberBlankError">Please enter card number</string>
    <string name="expiryBlankError">Please enter expiry details</string>
    <string name="securityCodeBlankError">Please enter security code</string>
    <string name="fNameBlankError">Please enter first name</string>
    <string name="lNameBlankError">Please enter last name</string>
    <string name="visa">Visa</string>
    <string name="master">Master</string>
    <string name="discover">Discover</string>
    <string name="american">American</string>
    <string name="cardNumberDigitError">Please check the card number</string>
    <string name="cardNumberError">Please enter valid card number</string>
    <string name="cardNotSupportedError">Only Master, VISA, American and Discover card supported</string>
    <string name="expiryFormatError">Expiry should be in MM/YY format</string>
    <string name="cardExpiredError">This month is passed</string>
    <string name="securityCodeLengthError">Please check the security number</string>
    <string name="fNameStringError">Please check first name</string>
    <string name="lNameStringError">Please check last name</string>
    <string name="banner_jayu">Banner Jayu</string>
    <string name="temperature_converter">Temperature Converter</string>
    <string name="enter_length">Enter Length</string>
    <string name="converted_temperatures">Converted Temperatures</string>
    <string name="celsius_c">Celsius °C</string>
    <string name="fahrenheit_f">Fahrenheit F</string>
    <string name="kelvin_k">Kelvin K</string>
    <string name="enter_temperature">Enter Temperature</string>
    <string name="about_app">About App</string>
    <string name="my_other_applications">My Other Applications</string>
    <string name="imgbanner">imgBanner</string>
    <string name="developed_by">Developed By :</string>
    <string name="jayu">Jayu</string>
    <string name="about_this_app">About This App</string>
    <string name="about_me">About Me</string>
    <string name="lets_connect">Lets Connect</string>
    <string name="imggithub">imgGitHub</string>
    <string name="imglinkedin">imgLinkedIn</string>
    <string name="imggmail">imgGmail</string>
    <string name="imgtwitter">imgTwitter</string>
    <string name="imgInstagram">imgInstagram</string>
    <string name="imgplaystore">imgPlayStore</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="developed_by_jayu">Developed By: Jayu</string>
    <string name="bannerAds_testing">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bannerAds_final">ca-app-pub-2623676331956176/8747211103</string>
    <string name="interstitialAds_testing">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitialAds_final">ca-app-pub-2623676331956176/3685428440</string>
</resources>