<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuBMICalculator"
        android:title="@string/bmi_calculator"/>

    <item android:id="@+id/menuPrimeNumber"
        android:title="@string/prime_number_checker"/>

    <item android:id="@+id/menuNumberConverter"
        android:title="@string/number_converter"/>

    <item android:id="@+id/menuCreditCardChecker"
        android:title="@string/credit_card_checker"/>

    <item android:id="@+id/menuTemperatureConverter"
        android:title="@string/temperature_converter"/>

    <item android:id="@+id/menuAboutApp"
        android:title="@string/about_app"/>

    <item android:id="@+id/menuMyOtherApps"
        android:title="@string/my_other_applications"/>

</menu>