<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/mainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/mainLabel"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mainLabel">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnBMICalculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculator"
                style="@style/style_button"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/btnPrimeNumberChecker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prime_number_checker"
                style="@style/style_button"
                android:layout_below="@id/btnBMICalculator"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/btnNumberConverter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_converter"
                style="@style/style_button"
                android:layout_below="@id/btnPrimeNumberChecker"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/btnCreditCardChecker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_card_checker"
                style="@style/style_button"
                android:layout_below="@id/btnNumberConverter"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/btnTemperatureConverter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature_converter"
                style="@style/style_button"
                android:layout_below="@id/btnCreditCardChecker"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>