<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.NumberConverterFragment"
    android:background="@color/colorLightGreyShade2">

    <TextView
        android:id="@+id/txtNumberConverterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_converter"
        style="@style/mainLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:id="@+id/fromLinear"
        android:layout_below="@+id/txtNumberConverterLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_background"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="10dp"
            android:spinnerMode="dropdown" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:contentDescription="@string/drawable_down" />

    </RelativeLayout>

    <TextView
        android:id="@+id/spinnerError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_one_option"
        android:layout_below="@+id/fromLinear"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorRed"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerError"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/enter_number"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/MyHintStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/sansProSemiBold"
            android:gravity="start|top"
            android:inputType="text"
            android:longClickable="false"
            android:textColor="@color/colorPrimaryText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_below="@+id/layoutWeight"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"/>

    <ScrollView
        android:id="@+id/answerScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCalculate"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/converted_numbers"
                android:layout_gravity="center_horizontal"
                style="@style/mainLabel"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/binary"
                    style="@style/secondaryLabel"/>

                <TextView
                    android:id="@+id/answerBinary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/secondaryLabel"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/octal"
                    style="@style/secondaryLabel"/>

                <TextView
                    android:id="@+id/answerOctal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/secondaryLabel"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/decimal"
                    style="@style/secondaryLabel"/>

                <TextView
                    android:id="@+id/answerDecimal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/secondaryLabel"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hexadecimal"
                    style="@style/secondaryLabel"/>

                <TextView
                    android:id="@+id/answerHexadecimal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/secondaryLabel"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>