<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.BMICalculatorFragment"
    android:background="@color/colorLightGreyShade2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mainLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/mainLabel"
            android:text="@string/bmi_calculator"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainLabel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/weight_in_kgs"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/MyHintStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtWeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/sansProSemiBold"
                android:gravity="start|top"
                android:inputType="numberDecimal"
                android:longClickable="false"
                android:textColor="@color/colorPrimaryText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/height_in_cms"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/MyHintStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtHeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/sansProSemiBold"
                android:gravity="start|top"
                android:inputType="numberDecimal"
                android:longClickable="false"
                android:textColor="@color/colorPrimaryText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/calculate"
            android:layout_below="@id/layoutHeight"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/bmiAnswerLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnSubmit"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/secondaryLabel"
                android:text="@string/bmi"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/bmiAnswer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/answer"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bmiResultLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bmiAnswerLinear"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/secondaryLabel"
                android:text="@string/result"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/bmiResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/answer"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bmiHealthyWeightLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bmiResultLinear"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/secondaryLabel"
                android:text="@string/healthy_weight"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/bmiHealthyWeight1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/answer"
                android:textColor="@color/colorGreen"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/bmiHealthyWeight2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/answer"
                android:textColor="@color/colorGreen"
                android:layout_weight="1"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>